--- a/pkg/html/vm_updates.html
+++ b/pkg/html/vm_updates.html
@@ -17,7 +17,7 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', async () => {
-      const resp = await fetch('/vm_updates');
+      const resp = await fetch('/vm_upgrades');
       const data = await resp.json();
       const msgEl = document.getElementById('message');
       const imagesEl = document.getElementById('images');
