--- a/pkg/html/vm_updates.html
+++ b/pkg/html/vm_updates.html
@@ -17,7 +17,10 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', async () => {
-      const resp = await fetch('/vm_upgrades');
+      const params = new URLSearchParams(window.location.search);
+      const token = params.get('token');
+      const api = (path) => token ? `${path}${path.includes('?') ? '&' : '?'}token=${encodeURIComponent(token)}` : path;
+      const resp = await fetch(api('/vm_upgrades'));
       const data = await resp.json();
       const msgEl = document.getElementById('message');
       const imagesEl = document.getElementById('images');
